--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.13.0",
     "react-on-screen": "^2.1.1",
+    "sharp": "^0.33.4",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   }
